--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@types/node": "20.6.0",
@@ -25,6 +26,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/diff": "5.0.3"
+    "@types/diff": "5.0.3",
+    "vitest": "2.1.8"
   }
 }
