--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev",
     "lint": "next lint",
+    "start": "next start",
     "test": "vitest"
   },
   "dependencies": {
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
     "diff": "5.1.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
     "lz-string": "1.5.0",
     "next": "13.4.19",
-    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@types/diff": "5.0.3",
+    "@types/node": "20.6.0",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
     "@vitest/coverage-v8": "2.1.8",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "postcss": "8.4.29",
+    "typescript": "5.2.2",
     "vitest": "2.1.8"
   }
 }
